--- a/final/email/header1.html
+++ b/final/email/header1.html
@@ -1,10 +1,3 @@
-<table cellpadding="0" cellspacing="0">
-                            <tr>
-                            	<td width="350" align="left" valign="top">
-                                     <div style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#555555; line-height:18px; margin-left:20px; margin-right:20px; margin-bottom:16px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-                                </td>
-                                <td width="249" align="left" valign="top">
-                                      <div style="font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#555555; line-height:16px; margin-right:20px; margin-bottom:16px;">is et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem</div>
-                                </td>
-                            </tr>
-                            </table>
+<div style="font-family:Arial, Helvetica, sans-serif; font-size:28px; color:#000077; line-height:34px;">COMPANY LOGO</div>
+
+<div style="font-family:Arial, Helvetica, sans-serif; font-size:22px; color:#000077; line-height:26px;">Awesome Tag Line</div>
